--- a/react-app/src/components/SplashPage/Navbar/NavBar.css
+++ b/react-app/src/components/SplashPage/Navbar/NavBar.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap');
+
 nav {
     position: fixed;
     z-index: 1;
@@ -5,35 +7,37 @@ nav {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    height: 60px;
-    width: 100%;
+    height: 100px;
+    width: 100vw;
+    margin: none;
 
-    background-color: white;
+    background-color: teal;
 
     box-shadow: 0 0 20px 5px rgba(120, 120, 120, .1);
 
   }
 
   .navbar__left {
-    width: 30%;
-    height: 60px;
+    width: auto;
+    height: 30px;
     display: flex;
     justify-content: flex-start;
     align-items: center;
     overflow: hidden;
+    background-color: black;
   }
 
-  .navbar__center {
+  /* .navbar__center {
     width: 40%;
     display: flex;
     justify-content: center;
     align-items: center;
 
     visibility: hidden;
-  }
+  } */
 
   .navbar__right {
-    width: 30%;
+    width: 80%;
     display: flex;
     justify-content: flex-end;
     align-items: center;
@@ -46,8 +50,25 @@ nav {
   }
 
   .navbar__logo {
-    height: 120px;
-    margin: auto 50px;
+    font-family: 'Open Sans', sans-serif;
+
+  }
+  .logo {
+    margin: none;
+    color: white;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 650;
+    background: linear-gradient(to right, hsl(50, 34%, 41%) 0%, red  51%, green);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+
+  }
+  .logo:hover{
+    background-position: right center;
+  }
+  a:-webkit-any-link {
+    color:black;
+    text-decoration: none !important;
   }
 
   .navbar__link {
@@ -58,11 +79,13 @@ nav {
     border-radius: 16px;
 
     color: black;
-
+    background-color: teal;
+    border:solid 1px rgba(0, 0 , 0, .2);
     text-decoration: none;
   }
 
   .navbar__link:hover {
-    background-color: whitesmoke;
+    box-shadow: 0 0 10px rgba(101, 4, 126, 0.4);
     cursor: pointer;
+    transition: box-shadow 0.3s;
   }
