Got product listing page to show pictures

--- a/react-app/src/components/SplashPage/auth/SignUpFormModal/SignUpForm.css
+++ b/react-app/src/components/SplashPage/auth/SignUpFormModal/SignUpForm.css
@@ -1,4 +1,16 @@
-.signup-form {
+div input {
+display: flex;
+justify-content: center;
+  border-radius: 10px;
+  padding:10px;
+  margin:10px 0;
+  box-shadow:0 0 15px 4px grey;
+  border: none;
+  width: 100%;
+}
+
+
+.modal-content {
     font-family: "Roboto", sans-serif;
     font-size: 12px;
 
