--- a/react-app/src/components/SplashPage/Navbar/UserMenu/UserMenu.css
+++ b/react-app/src/components/SplashPage/Navbar/UserMenu/UserMenu.css
@@ -60,7 +60,10 @@
   .usermenu__option {
     font-family: 'Roboto', sans-serif;
     font-size: 12px;
-    padding: 10px
+    padding: 10px;
+    background-color: white;
+    text-transform: none;
+    border: none;
   }
 
   .usermenu__option:hover {
