Cart hooked up to local storage

--- a/react-app/src/components/SplashPage/Navbar/NavBar.css
+++ b/react-app/src/components/SplashPage/Navbar/NavBar.css
@@ -103,8 +103,10 @@ nav.nav-bar {
     text-decoration: none;
     padding-right: 10px;
   }
-  i{
+  .navbar__link i{
      color: black;
+     font-weight:bold;
+     padding: 3px;
   }
   span{
     color: black;
