Removed use strict console errors

--- a/react-app/src/components/Products/Product.css
+++ b/react-app/src/components/Products/Product.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap');
 .product__listing-title {
     font-family: "Open Sans", sans-serif;
+    margin-left: auto;
+    margin-left: 30px;
 }
 .product__listing-wrapper {
     margin-top: 150px;
@@ -12,7 +14,7 @@
     flex-flow: row wrap;
     height: 100%;
     width: auto;
-    margin-top: 50px;
+    margin-top: 30px;
     padding-bottom:100px;
 
 }
