--- a/react-app/src/components/Ideas/Idea.css
+++ b/react-app/src/components/Ideas/Idea.css
@@ -15,7 +15,7 @@
     width: 800px;
     height: auto;
     margin-top: 200px;
-    margin-left: 165px;
+    margin-left: 110px;
     margin-right: auto;
 }
 .idea__form-btn {
@@ -76,7 +76,9 @@ textarea {
     background-color:rgb(162, 201, 164);
     border-radius: 10px;
     margin-top: 5px;
-    margin-bottom: 5px;
+    margin-bottom: 15px;
+    border: 1px solid rgb(85, 85, 85);
+    box-shadow: 1px 1px 5px rgb(65 65 65);
     /* display:flex; */
 }
 
@@ -86,6 +88,9 @@ textarea {
     justify-self: center;
     margin-top: 5px;
     cursor: pointer;
+    margin-bottom: 15px;
+    border: 1px solid rgb(85, 85, 85);
+    box-shadow: 1px 1px 5px rgb(65 65 65);
 }
 .idea__container div{
     padding: 1px;
