--- a/react-app/src/components/SplashPage/Navbar/NavBar.css
+++ b/react-app/src/components/SplashPage/Navbar/NavBar.css
@@ -13,7 +13,6 @@ nav.nav-bar {
     width: 100vw;
     margin: none;
     background-repeat: none;
-    font-family: "Open Sans", sans-serif;
 
     /* background-size:; */
 
@@ -45,7 +44,7 @@ nav.nav-bar {
     justify-content: flex-start;
     align-items: center;
     overflow: hidden;
-    
+
     /* background-color: rgb(22, 4, 4); */
   }
 
@@ -78,7 +77,7 @@ nav.nav-bar {
   .logo {
     margin: none;
     color: white;
-    font-family: 'Open Sans', sans-serif;
+    /* font-family: 'Open Sans', sans-serif; */
     font-weight: 650;
     background: linear-gradient(to right, hsl(50, 34%, 41%) 0%, red  51%, green);
 
@@ -93,7 +92,6 @@ nav.nav-bar {
   }
 
   .navbar__link {
-    font-family: "Open Sans", sans-serif;
     font-size: 12px;
     /* font-weight: 600; */
     border-radius: 16px;
