--- a/react-app/src/components/Ideas/Idea.css
+++ b/react-app/src/components/Ideas/Idea.css
@@ -40,7 +40,7 @@
 .idea__form-btn:hover {
     box-shadow: grey;
     border: 2px solid rgb(85, 85, 85);
-    /* background: rgb(238, 255, 0); */
+    background-color: rgb(238 134 137);
 }
 
 
@@ -91,7 +91,7 @@ textarea {
     /* border:rgb(15, 1, 15) 1px solid; */
     padding: 7px;
     color:rgb(15, 1, 15);
-    background-color:rgb(162, 201, 164);
+    background-color:rgb(238 134 137);
     border-radius: 10px;
     margin-top: 5px;
     margin-bottom: 15px;
