--- a/react-app/src/components/SplashPage/Navbar/NavBar.css
+++ b/react-app/src/components/SplashPage/Navbar/NavBar.css
@@ -1,13 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap');
 
-nav.nav-bar {
+.nav-bar {
   /* keeps nav at the top */
   top:0;
     position: fixed;
     z-index: 1;
 
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     height: 100px;
     width: 100vw;
@@ -21,7 +21,7 @@ nav.nav-bar {
     box-shadow: 0 0 20px 5px rgba(120, 120, 120, .1);
 
   }
-  .nav-bar nav{
+  /* .nav-bar nav{
     background-color:rgba(10,10,10,0.3);
     position: fixed;
     z-index: 2;
@@ -34,11 +34,11 @@ nav.nav-bar {
     margin: 0 !important;
 
  background-color:rgba(10,10,10,0.3);
-}
+} */
 
   .navbar__left {
 
-    /* /* width: auto; */
+    width: auto;
     height: 80px;
     display: flex;
     justify-content: flex-start;
@@ -48,22 +48,37 @@ nav.nav-bar {
     /* background-color: rgb(22, 4, 4); */
   }
 
-  /* .navbar__center {
-    width: 40%;
+  .navbar__center {
+    /* width: 40%; */
     display: flex;
     justify-content: center;
+    justify-content: space-around;
     align-items: center;
+    width: 300px;
+    height: 40px;
+    border-radius: 20px;
+    /* border: 1px solid white; */
+    box-shadow: 2px;
+    text-align: center;
+    margin-left: 24px;
 
-    visibility: hidden;
-  } */
+  }
+  .fab {
+    font-size: 35px;
+  }
+
+  .fab:hover {
+    color: rgb(238 134 137);
+  }
 
   .navbar__right {
-    width: 80%;
+    /* width: 80%; */
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    margin-top: 5px;
 
-    margin: 10px;
+    /* margin: 10px; */
   }
 
   .navbar__right > * {
@@ -87,8 +102,11 @@ nav.nav-bar {
     background-position: right center;
   }
   .nav-btn{
-    color:white;
+    color: black;
     text-decoration: none !important;
+  }
+  .nav-btn:hover{
+color: rgb(238 134 137);
   }
 
   .navbar__link {
@@ -116,4 +134,5 @@ nav.nav-bar {
     box-shadow: 0 0 10px rgba(101, 4, 126, 0.4);
     cursor: pointer;
     transition: box-shadow 0.3s;
+    color: rgb(238 134 137);
   }
