--- a/react-app/src/components/SplashPage/auth/LoginFormModal/LoginForm.css
+++ b/react-app/src/components/SplashPage/auth/LoginFormModal/LoginForm.css
@@ -10,6 +10,11 @@ flex-direction: column;
 align-items: center;
 }
 
+.login-form input {
+  width: 200px;
+  background-color: none;
+
+}
 .login-form__top{
 margin:none;
 
@@ -20,6 +25,7 @@ display: flex;
 
 justify-content: space-between;
 align-items: center;
+background-color: white;
 }
 
 .login-form__top h1 {
