--- a/react-app/src/components/Ideas/Idea.css
+++ b/react-app/src/components/Ideas/Idea.css
@@ -20,11 +20,13 @@
 }
 .dap__btn-container {
 display: flex;
+margin-right: -5px;
 
 
 }
 .idea__btns {
 display: flex;
+justify-content: space-between
 ;
 }
 #dapped__btn {
@@ -32,9 +34,7 @@ display: flex;
     color: rgb(162, 201, 164);
     background-color: transparent;
     text-shadow: 0px 0px 3px black, 0px 0px 3px black;
-
     border: none;
-
 
 }
 #undapped__btn {
@@ -162,7 +162,7 @@ textarea {
     padding: 1px;
     display: flex;
     justify-content: flex-end;
-}
+    margin-right: -2px;}
 
 .idea__title {
     color: blue;
