--- a/react-app/src/components/Ideas/Idea.css
+++ b/react-app/src/components/Ideas/Idea.css
@@ -35,6 +35,7 @@ justify-content: space-between
     background-color: transparent;
     text-shadow: 0px 0px 3px black, 0px 0px 3px black;
     border: none;
+    /* cursor:not-allowed; */
 
 }
 #undapped__btn {
