--- a/react-app/src/components/SplashPage/auth/LoginFormModal/LoginForm.css
+++ b/react-app/src/components/SplashPage/auth/LoginFormModal/LoginForm.css
@@ -3,15 +3,17 @@
 font-size: 12px;
 
 
-width: 300px;
+width: 400px;
+height: 200px;
 
 display: flex;
 flex-direction: column;
 align-items: center;
+justify-content: center;
 }
 
 .login-form input {
-  width: 200px;
+  width: 300px;
   background-color: none;
 
 }
@@ -37,13 +39,17 @@ font-size: 20px;
 cursor: pointer;
 }
 
-.login-form__button {
+.login__btn-container {
+  display: flex;
 font-size: 14px;
 
 border: 2px solid lightgrey;
 padding: 10px;
 border-radius: 5px;
+margin-left: 10px;
+justify-content: center;
 }
+
 
 .login-form__button:hover {
 border-color: black;
