--- a/react-app/src/components/SplashPage/SplashPageModal/HomePage.css
+++ b/react-app/src/components/SplashPage/SplashPageModal/HomePage.css
@@ -1,8 +1,38 @@
-.splash-page {
-    display: flex;
-    flex-wrap: wrap;
+.splash-page div {
+  height: inherit;
+  width: inherit;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  justify-content: space-between;
 }
+
 .splash-page img {
-   height: 250px;
-   width: auto;
+  height: 250px;
+  width: auto;
+  /* border: 2px solid rgb(110, 18, 18); */
+  border-radius: 10%;
+  /* background: aqua; */
+  margin: 10px;
+}
+
+#mern {
+  /* background-color: lawngreen; */
+  box-shadow: 1px 1px 5px rgb(65 65 65);
+  width: 550px;
+}
+
+#native {
+  /* background-color: black; */
+  box-shadow: 1px 1px 5px rgb(65 65 65);
+}
+
+#curlyB {
+  border: 2px solid lightgrey;
+  box-shadow: 1px 1px 5px rgb(65 65 65);
+}
+
+#curlyG {
+  /* background-color: blue; */
+  box-shadow: 1px 1px 5px rgb(65 65 65);
 }
