Homepage has pictures, needs login buttons

--- a/react-app/src/components/SplashPage/SplashPageModal/HomePage.css
+++ b/react-app/src/components/SplashPage/SplashPageModal/HomePage.css
@@ -1,38 +1,71 @@
-.splash-page div {
-  height: inherit;
-  width: inherit;
+.splash-page {
+  margin-top: 150px;
+  margin-left: 12.5%;
+  height: 700px;
+  width: 75%;
   display: flex;
-  flex-wrap: wrap;
+  border: 1px solid green;
+}
+
+.splash-left {
+  /* background-image: url(https://i.imgur.com/N4WM5U4.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover; */
+  width: 50%;
+  /* flex-wrap: wrap; */
   justify-content: center;
   justify-content: space-between;
 }
-
-.splash-page img {
-  height: 250px;
-  width: auto;
-  /* border: 2px solid rgb(110, 18, 18); */
-  border-radius: 10%;
-  /* background: aqua; */
-  margin: 10px;
+.left-bottom {
+  display: flex;
+  flex-wrap: wrap;
+  height: 300px;
+  justify-content: space-around;
+  justify-content: space-between;
 }
 
-#mern {
+/* .splash-page img { */
+
+/* border: 2px solid rgb(110, 18, 18); */
+/* border-radius: 10%; */
+/* background: aqua; */
+/* margin: 10px; */
+
+/* } */
+
+.mern img {
+  width: 100%;
+
   /* background-color: lawngreen; */
+
   box-shadow: 1px 1px 5px rgb(65 65 65);
-  width: 550px;
 }
 
-#native {
+.native img {
+  width: 100%;
+  background-color:black ;
   /* background-color: black; */
   box-shadow: 1px 1px 5px rgb(65 65 65);
 }
 
-#curlyB {
+.curlyB img {
+  width: 250px;
+
   border: 2px solid lightgrey;
   box-shadow: 1px 1px 5px rgb(65 65 65);
 }
 
-#curlyG {
+.curlyG img {
+  width: 100%;
+
   /* background-color: blue; */
   box-shadow: 1px 1px 5px rgb(65 65 65);
+}
+.splash-right {
+  background-image: url(https://i.imgur.com/nVmqbdM.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 50%;
 }
