--- a/react-app/src/components/SplashPage/SplashPageModal/HomePage.css
+++ b/react-app/src/components/SplashPage/SplashPageModal/HomePage.css
@@ -1,23 +1,28 @@
 .splash-page {
+  padding:0px;
   margin-top: 150px;
   margin-left: 12.5%;
-  height: 700px;
+  height: 500px;
   width: 75%;
   display: flex;
   border: 1px solid green;
 }
 
 .splash-left {
-  /* background-image: url(https://i.imgur.com/N4WM5U4.png);
+  display: flex;
+  flex-direction: column;
+  /* background-image: url(https://i.imgur.com/N4WM5U4.png); */
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover; */
+  background-size: contain;
   width: 50%;
   /* flex-wrap: wrap; */
+  position: relative;
   justify-content: center;
   justify-content: space-between;
 }
 .left-bottom {
+
   display: flex;
   flex-wrap: wrap;
   height: 300px;
@@ -42,11 +47,18 @@
   box-shadow: 1px 1px 5px rgb(65 65 65);
 }
 
-.native img {
+.native {
+
   width: 100%;
-  background-color:black ;
+  height: 100%;
+  /* background-color:black; */
+  background-image: url(https://i.imgur.com/ZhLRTeO.png);
   /* background-color: black; */
   box-shadow: 1px 1px 5px rgb(65 65 65);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: black;
 }
 
 .curlyB img {
@@ -56,16 +68,46 @@
   box-shadow: 1px 1px 5px rgb(65 65 65);
 }
 
-.curlyG img {
+.curlyG {
+  background-image:url(https://i.imgur.com/N4WM5U4.png);
   width: 100%;
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+
 
   /* background-color: blue; */
   box-shadow: 1px 1px 5px rgb(65 65 65);
+  
 }
 .splash-right {
+  /* position: absolute; */
   background-image: url(https://i.imgur.com/nVmqbdM.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   width: 50%;
+}
+
+.login-button {
+    position: absolute;
+    font-family: 'Roboto', sans-serif;
+    text-align: center;
+    font-size: 12px;
+    padding: 10px;
+    background-color: white;
+    text-transform: none;
+    border: solid green;
+    border-radius: 10%;
+    width: 30%;
+    z-index: 9;
+    margin-top: 50px;
+    margin-left: 50%;
+}
+
+.login-button:hover {
+  cursor: pointer;
+  background-color: whitesmoke;
 }
