--- a/react-app/src/components/SplashPage/SplashPageModal/HomePage.css
+++ b/react-app/src/components/SplashPage/SplashPageModal/HomePage.css
@@ -2,7 +2,7 @@
   padding:0px;
   margin-top: 150px;
   margin-left: 12.5%;
-  height: 500px;
+  height: 600px;
   width: 75%;
   display: flex;
   border: 1px solid green;
@@ -16,49 +16,52 @@
   background-repeat: no-repeat;
   background-size: contain;
   width: 50%;
-  /* flex-wrap: wrap; */
+  flex-wrap: wrap;
   position: relative;
   justify-content: center;
   justify-content: space-between;
 }
-.left-bottom {
+/* .left-bottom {
 
   display: flex;
   flex-wrap: wrap;
   height: 300px;
   justify-content: space-around;
   justify-content: space-between;
+} */
+.splash-page img {
+
+border: 2px solid rgb(110, 18, 18);
+border-radius: 10%;
+background: aqua;
+ margin: 10px;
 }
 
-/* .splash-page img { */
-
-/* border: 2px solid rgb(110, 18, 18); */
-/* border-radius: 10%; */
-/* background: aqua; */
-/* margin: 10px; */
-
-/* } */
-
-.mern img {
-  width: 100%;
-
-  /* background-color: lawngreen; */
-
-  box-shadow: 1px 1px 5px rgb(65 65 65);
-}
-
-.native {
-
+ .mern {
   width: 100%;
   height: 100%;
-  /* background-color:black; */
+  background-color:black;
   background-image: url(https://i.imgur.com/ZhLRTeO.png);
-  /* background-color: black; */
+  background-color: black;
   box-shadow: 1px 1px 5px rgb(65 65 65);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+
+}
+
+ .native {
+
+  width: 100%;
+  height: 100%;
+  background-color:black;
+  background-image: url(https://i.imgur.com/ZhLRTeO.png);
   background-color: black;
+  box-shadow: 1px 1px 5px rgb(65 65 65);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
 }
 
 .curlyB img {
@@ -78,19 +81,26 @@
 
 
 
-  /* background-color: blue; */
-  box-shadow: 1px 1px 5px rgb(65 65 65);
-  
+  /* background-color: blue;
+  box-shadow: 1px 1px 5px rgb(65 65 65); */
+
 }
 .splash-right {
-  /* position: absolute; */
-  background-image: url(https://i.imgur.com/nVmqbdM.png);
+  position: absolute;
+  /* background-image: url(https://i.imgur.com/nVmqbdM.png); */
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   width: 50%;
 }
-
+.welcome-text {
+  position: absolute;
+    font-family: 'Roboto', sans-serif;
+    text-align: center;
+    font-size: 12px;
+    padding: 10px;
+    color: azure;
+}
 .login-button {
     position: absolute;
     font-family: 'Roboto', sans-serif;
@@ -107,6 +117,26 @@
     margin-left: 50%;
 }
 
+.login-button:hover {
+  cursor: pointer;
+  background-color: whitesmoke;
+}
+
+.sign__up-button {
+  position: absolute;
+  font-family: 'Roboto', sans-serif;
+  text-align: center;
+  font-size: 12px;
+  padding: 10px;
+  background-color: white;
+  text-transform: none;
+  border: solid green;
+  border-radius: 10%;
+  width: 25%;
+  z-index: 9;
+  margin-top: 50px;
+  margin-left: 100%;
+}
 .login-button:hover {
   cursor: pointer;
   background-color: whitesmoke;
