--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -1,4 +1,8 @@
 /* TODO Add site wide styles */
+#root {
+width: 100vw;
+height: 100vh;
+}
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
